[package]
name = "ravana_reddit_api"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
"rustls-tls",
"json"
] }
oauth2 = "4.1.0"
url = "2.2.2"
thiserror = "1.0.30"
async-trait = "0.1.7"
tokio = { version = "1", features = ["full"] }
serde = "1.0.137"
serde_json = "1.0"

[dev-dependencies]
anyhow = "1.0.57"
